--- a/locale/en.json
+++ b/locale/en.json
@@ -135,6 +135,7 @@
     "yobit": "Yobit",
     "empoex": "Empoex",
     "cryptsy": "Cryptsy",
+    "exbitron": "Exbitron",
     "ccex": "C-Cex",
     "crex": "Crex24",
     "tradesatoshi": "TradeSatoshi",
