--- a/locale/en.json
+++ b/locale/en.json
@@ -136,6 +136,7 @@
     "empoex": "Empoex",
     "cryptsy": "Cryptsy",
     "exbitron": "Exbitron",
+    "xeggex": "XeggeX",
     "ccex": "C-Cex",
     "crex": "Crex24",
     "tradesatoshi": "TradeSatoshi",
